--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: '3.4'
 
 services:
-
+# docker tag local-image:tagname new-repo:tagname
+# docker push new-repo:tagname
   kframework_service:
-    image: kframework_image:v1.0
-    container_name: kframework_container
+    image: k-framework-docker
+    container_name: k-framework-docker
     build:
       context: .
       dockerfile: ./Dockerfile
